--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
    <!-- footer section start -->
    <div class="footer_section layout_padding">
       <div class="container">
-         <div class="footer_logo"><a href="index.html"><img src="images/logotuto.webp"></a></div>
+         <div class="footer_logo"><a href="index.html"><img src="images/logobt.png"></a></div>
          <div class="input_bt">
 
          </div>
