--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
    <div class="banner_bg_main">
       <!-- header top section start -->
       <div class="container">
+         <div class="row">
+            <img class="banner_bg_main" src="images/BHome.png" alt="Card image cap">
+         </div>
          <div class="header_section_top">
             <div class="row">
                <div class="col-sm-12">
@@ -74,7 +77,6 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <div class="logo"><a href="index.html"><img src=""></a></div>
                </div>
             </div>
          </div>
@@ -85,13 +87,7 @@
          <div class="container">
             <div class="containt_main">
                <div class="main">
-                  <!-- Another variation with a button -->
-                  <div class="input-group" style="padding-bottom: 200px;">
-                     <!-- <input type="text" class="form-control" placeholder="Search this blog"> -->
                      <div class="input-group-append">
-                        <!-- <button class="btn btn-secondary" type="button" style="background-color: #f26522; border-color:#f26522 ">
-                           <i class="fa fa-search"></i> -->
-                        </button>
                      </div>
                   </div>
                </div>
@@ -104,12 +100,12 @@
       <figure class="text-center">
          <div class="row">
             <div class="col-sm"></div>
-            <div class="col-sm">
+            <div class="col-sm" style="padding-top: 10px;">
                <p class="h1">CheckList</p>
             </div>
             <div class="col-sm">
                <div class="dropdown" style="margin-top: 0.45em;">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" style="margin-top: 10px;"
                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categorias
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
